5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1836_1277.log
== TEST (2019-06-27 11:40:19) 
-- CODE:
from numpy import*
a = int(input("cidade a:"))
b = int(input("Cidade b:"))
c = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15,],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,,13,1,13,14,0]])
d = array([111,222,333,444,555,666,777])
for x in range(7):
	if a == d[x]:
		i=x
for x in range(7):
	if b == d[x]:
		j = s
print(c[i,j])
-- ERROR:
File "XXXX", line 10
    [1,15,,13,1,13,14,0]])
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:40:31) 
-- CODE:
from numpy import*
a = int(input("cidade a:"))
b = int(input("Cidade b:"))
c = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15,],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
d = array([111,222,333,444,555,666,777])
for x in range(7):
	if a == d[x]:
		i=x
for x in range(7):
	if b == d[x]:
		j = s
print(c[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 11:41:01) 
-- CODE:
from numpy import*
a = int(input("cidade a:"))
b = int(input("Cidade b:"))
c = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15,],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
d = array([111,222,333,444,555,666,777])
for x in range(7):
	if a == d[x]:
		i=x
for x in range(7):
	if b == d[x]:
		j = x
print(c[i,j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 11:41:13) 
-- CODE:
from numpy import*
a = int(input("cidade a:"))
b = int(input("Cidade b:"))
c = array([[0,2,11,6,15,11,1],
			 [2,0,7,12,4,2,15,],
			 [11,7,0,11,8,3,13],
			 [6,12,11,0,10,2,1],
			 [15,4,8,10,0,5,13],
			 [11,2,3,2,5,0,14],
			 [1,15,13,1,13,14,0]])
d = array([111,222,333,444,555,666,777])
for x in range(7):
	if a == d[x]:
		i=x
for x in range(7):
	if b == d[x]:
		j = x
print(c[i,j])
-- EXECUTION TIME:
0.971293
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
